# service-oriented-architectures

./: .gitignore  README.md  docker-compose.yml  sample.c4
docs/: diagram.c4  er.md
gateway/: Cargo.toml  Dockerfile  README.md  build.rs  openapi.yml
gateway/src/: cookiefile  main.rs  models.rs  posts.rs  state.rs  stats.rs  users.rs
gateway/src/posts/: client.rs  post_delete.rs  post_get.rs  post_get_page.rs  post_post.rs  post_put.rs
gateway/src/stats/: client.rs  dynamics_comments.rs  dynamics_likes.rs  dynamics_views.rs  get_stats.rs  stats_comment.rs  stats_likes.rs  stats_view.rs  top_posts.rs  top_users.rs
gateway/src/users/: login.rs  user_get.rs  user_post.rs  user_put.rs
posts/: Cargo.toml  Dockerfile  README.md  build.rs  startup.sh
posts/migrations/: 20250331134800_init.down.sql  20250331134800_init.up.sql
posts/src/: db.rs  error.rs  main.rs  server.rs
posts/tests/: posts.rs
posts/tests/containers/: mod.rs
stats/: Cargo.toml  Dockerfile  README.md  build.rs  start.sh  startup.sh
stats/ch_migrations/: chm.toml
stats/ch_migrations/1748123439_init/: down.sql  up.sql
stats/src/: args.rs  db.rs  error.rs  main.rs  server.rs
stats/tests/: kafka.rs  stats.rs
stats/tests/containers/: mod.rs
stats/tests/fill_db/: mod.rs
statsdb/: config.xml
tests/: Cargo.toml
tests/migrations-users/: 20250303002855_init.up.sql
tests/proto/: posts.proto  stats.proto
tests/tests/: tests.rs
tests/tests/containers/: mod.rs
tests/tests/model/: mod.rs
users/: Cargo.toml  Dockerfile  README.md  openapi.yml  startup.sh
users/src/: calls.rs  error.rs  initialize.rs  main.rs  model.rs
users/src/calls/: auth.rs  create_user.rs  get_user.rs  login.rs  update_user.rs
users/src/model/: user.rs  username.rs
users/tests/: users.rs
users/tests/containers/: mod.rs
