[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["http2", "json"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
clap = { version = "4.5.31", features = ["derive"] }
http = "1.2.0"
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
serde = { version = "1.0.218", features = ["serde_derive"] }
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
