[package]
name = "gateway"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.8.1", features = ["http2", "json", "macros"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.31", features = ["derive"] }
http = "1.2.0"
jsonwebtoken = "9.3.1"
prost = "0.13"
prost-types = "0.13"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
serde = { version = "1.0.218", features = ["serde_derive"] }
serde_json = "1.0.140"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.13.0", features = ["prost"] }


[build-dependencies]
tonic-build = "0.13.0"
