[package]
name = "posts"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.34", features = ["derive"] }
log = "0.4.27"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0.219", features = ["derive"] }
sqlx = { version = "0.8.3", features = ["chrono", "postgres", "runtime-tokio"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tonic = { version = "0.13.0", features = ["prost", "server"] }

[build-dependencies]
tonic-build = "0.13.0"
