[package]
name = "stats"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.34", features = ["derive"] }
clickhouse = { version = "0.13.2", features = ["chrono"] }
log = "0.4.27"
prost = "0.13"
prost-types = "0.13"
serde = { version = "1.0.219", features = ["derive"] }
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.17"
tonic = { version = "0.13.0", features = ["prost", "server"] }

[build-dependencies]
tonic-build = "0.13.0"

[dev-dependencies]
chrono = { version = "0.4.40", features = ["serde"] }
clickhouse = { version = "0.13.2", features = ["test-util"] }
serde_json = "1.0.140"
testcontainers = "0.24.0" 
testcontainers-modules = { version = "0.12.1", features = ["clickhouse", "kafka"] }
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread", "process" ] }
rand = "0.9.1"
rdkafka = { version = "0.37.0", features = ["cmake-build"] }
