[package]
name = "users"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5.3"
axum = { version = "0.8.1", features = ["http2", "json"] }
axum-extra = { version = "0.10.0", features = ["cookie"] }
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
jsonwebtoken = "9.3.1"
regex = "1.11.1"
serde = { version = "1.0.218", features = ["serde_derive"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
validator = { version = "0.20.0" }

[dev-dependencies]
reqwest = { version = "0.12.12", features = ["cookies", "json"] }
sqlx = { version = "0.8.3", features = ["postgres", "runtime-tokio", "chrono"] }
testcontainers = "0.24.0" 
testcontainers-modules = { version = "0.12.1", features = ["postgres"] }
